Fri Jul 18 19:03:53 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Avoid using `and`.
	  Patch by gogo tanaka [#10058]

Fri Jul 18 17:41:54 2014  GoGo tanaka  <qlli.illb@gmail.com>

	* test/matrix/test_matrix.rb: Add tests for Matrix class.
	  [Feature #10057][ruby-core:63809]

Fri Jul 18 11:10:53 2014  Scott Francis  <scott.francis@shopify.com>

	* enum.c (enum_any): optimize object allocations for Array and
	  Hash when `each` is not redefined, always false if empty and the
	  case without a block.  [fix GH-671]

Fri Jul 18 10:14:42 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/fileutils.rb: added missing options of FileUtils.touch by @Domon.
	  [fix GH-669]

Thu Jul 17 19:57:27 2014  Herwin  <herwin@quarantainenet.nl>

	* ext/thread/thread.c (rb_szqueue_push): add optional parameter,
	  non_block defaulted to false.  [ruby-core:63794] [Feature #10052]

Wed Jul 16 23:01:43 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): support array of
	  VT_RECORD variant.

Wed Jul 16 20:21:49 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* vm_core.h (struct rb_iseq_struct): stack_max is changed to int
	  because all calculations related to stack_max in compile.c
	  (iseq_set_sequence) and vm_insnhelper.c (vm_push_frame) are
	  conducted by using int. This partly reverts r23945.
	* vm_insnhelper.c (vm_push_frame): ditto. This reverts r42401.

Wed Jul 16 19:55:32 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* vm_core.h (struct rb_iseq_struct): temporal workaround of [Bug 10037].
	  Add padding on big-endian 64-bit architecture (e.g. sparc64).

Wed Jul 16 19:32:23 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_record_method_missing): call
	  rb_hash_fetch instead of rb_hash_aref.

Wed Jul 16 18:08:47 2014  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (rb_iseq_defined_string): use rb_gc_mark_object() instead of
	  marking from vm_mark().
